# obsidian-rag

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
deep_notes/: .env.example  __main__.py  api.py  app.py  config.py  ingest.py  query.py  requirements.txt
deep_notes/components/: chunking.py  embeddings.py  llm.py  vector_store.py
obsidian-plugin/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/src/: api-client.ts  main.ts  search-view.ts  settings.ts
tests/: conftest.py  test_chunking.py  test_config.py  test_factories.py  test_ingest.py
