[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Local-first semantic search and chat over your Obsidian vault, powered by LlamaIndex, Qdrant, and Ollama."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lucas Mir" }]
keywords = ["rag", "obsidian", "llamaindex", "qdrant", "ollama", "semantic-search", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lucmir/obsidian-rag"
Repository = "https://github.com/lucmir/obsidian-rag"
Issues = "https://github.com/lucmir/obsidian-rag/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
"deep_notes/api.py" = ["B008"]  # FastAPI: Depends/Security in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
